<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:background="@drawable/frg_seniorcardrefund_querybalance_topcard"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="13dp"
        android:textSize="13dp"
        android:textColor="@color/comon_text_black_normal"
        android:text="@string/seniorcardrefund_querybalance_remarks"
        android:gravity="center_vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/common_background_gray"/>
    <LinearLayout
        style="@style/frg_seniorcardrefund_linear">
        <TextView
            style="@style/frg_seniorcardrefund_text"
            android:text="@string/seniorcardrefund_querybalance_idcard"/>
        <View
            android:layout_width="1dp"
            android:layout_height="17dp"
            android:background="@color/common_line_gray_twopx"/>
        <EditText
            android:id="@+id/et_idcard"
            style="@style/frg_seniorcardrefund_edittext"
            android:hint="@string/seniorcardrefund_querybalance_idcard_hint"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_line_gray_onepx"
        android:layout_marginLeft="13dp"/>
    <LinearLayout
        style="@style/frg_seniorcardrefund_linear">
        <TextView
            style="@style/frg_seniorcardrefund_text"
            android:text="@string/seniorcardrefund_querybalance_seniorcard"/>
        <View
            android:layout_width="1dp"
            android:layout_height="17dp"
            android:background="@color/common_line_gray_twopx"/>
        <EditText
            android:id="@+id/et_seniorcard"
            style="@style/frg_seniorcardrefund_edittext"
            android:hint="@string/seniorcardrefund_querybalance_seniorcard_hint"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/common_background_gray"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_submit"
            android:text="@string/app_submit"
            android:layout_width="@dimen/aty_common_nextbutton_width"
            android:layout_height="@dimen/aty_common_nextbutton_height"
            android:background="@drawable/shape_aty_common_nextbutton"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/aty_common_nextbutton_textsize"
            style="?android:attr/borderlessButtonStyle"/>
    </RelativeLayout>
</LinearLayout>