<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:background="@drawable/frg_seniorcardrefund_querybalance_topcard"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_marginLeft="19dp" />
        <TextView
            android:id="@+id/tv_idcardno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="19dp" />
        <TextView
            android:id="@+id/tv_seniorcardno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="19dp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="13dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="@color/comon_text_black_most"
            android:text="@string/seniorcardrefund_refund_canreturnbalance"/>
        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="@color/frg_seniorcardrefund_refund_balance"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/common_background_gray"/>
    <LinearLayout
        style="@style/frg_seniorcardrefund_linear">
        <TextView
            style="@style/frg_seniorcardrefund_text"
            android:text="@string/seniorcardrefund_refund_bankcard"/>
        <View
            android:layout_width="1dp"
            android:layout_height="17dp"
            android:background="@color/common_line_gray_twopx"/>
        <EditText
            android:id="@+id/et_bankcard"
            style="@style/frg_seniorcardrefund_edittext"
            android:hint="@string/seniorcardrefund_refund_bankcard_hint"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_line_gray_onepx"
        android:layout_marginLeft="13dp"/>
    <LinearLayout
        style="@style/frg_seniorcardrefund_linear">
        <TextView
            style="@style/frg_seniorcardrefund_text"
            android:text="@string/seniorcardrefund_refund_bankcard"/>
        <View
            android:layout_width="1dp"
            android:layout_height="17dp"
            android:background="@color/common_line_gray_twopx"/>
        <EditText
            android:id="@+id/et_bankcard_again"
            style="@style/frg_seniorcardrefund_edittext"
            android:hint="@string/seniorcardrefund_refund_bankcard_hint_again"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/common_background_gray"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/comon_text_black_most"
        android:textSize="12dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/seniorcardrefund_refund_remarks_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/comon_text_black_normal"
        android:textSize="12dp"
        android:layout_marginLeft="13dp"
        android:layout_marginBottom="5dp"
        android:text="@string/seniorcardrefund_refund_remarks_info1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/comon_text_black_normal"
        android:textSize="12dp"
        android:layout_marginLeft="13dp"
        android:text="@string/seniorcardrefund_refund_remarks_info2"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_submit"
            android:text="@string/app_submit"
            android:layout_width="@dimen/aty_common_nextbutton_width"
            android:layout_height="@dimen/aty_common_nextbutton_height"
            android:background="@drawable/shape_aty_common_nextbutton"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/aty_common_nextbutton_textsize"
            style="?android:attr/borderlessButtonStyle"/>
    </RelativeLayout>
</LinearLayout>