<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background_gray">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/frg_studentcardsearch_background"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_frg_studentcardsearch_whitecard"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/comon_text_black_most"
            android:layout_gravity="center_horizontal"
            android:text="@string/studentcard_search_tosearch_titleinfo"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14dp"
                    android:gravity="center"
                    android:textColor="@color/comon_text_black_most"
                    android:text="@string/studentcard_search_tosearch_namepromt"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="14dp"
                    android:textColor="@color/comon_text_black_most"
                    android:text="@string/studentcard_search_tosearch_idcardpromt"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true">
                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/input_editext_hinit_style_text"
                    android:paddingLeft="20dp"
                    android:hint="@string/studentcard_search_tosearch_pleaseinputname"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:background="@color/common_line_gray_onepx"/>
                <EditText
                    android:id="@+id/et_idcard"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/input_editext_hinit_style_text"
                    android:paddingLeft="20dp"
                    android:hint="@string/studentcard_search_tosearch_pleaseinputidcard"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:background="@color/common_line_gray_onepx"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_common_appthmebutton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:text="@string/studentcard_search_tosearch_btnsubmit"
            android:layout_marginBottom="60dp"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

</RelativeLayout>